[project]
name = "ohash"
version = "0.1.0"
description = "a command-line file encryption and decryption tool (CLI) "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.5",
]

[project.scripts]
ohash = "ohash.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.5",
]
